--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,8 @@ javac.classpath=\
     ${libs.Apache Poi 3.8.classpath}:\
     ${libs.jnlp.classpath}:\
     ${libs.dom4j 1.6.1.classpath}:\
-    ${libs.xml beans 2.5.classpath}
+    ${libs.xml beans 2.5.classpath}:\
+    ${libs.mysql-connector-java-5.1.24.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
