--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,7 +34,10 @@ javac.classpath=\
     ${libs.jnlp.classpath}:\
     ${libs.dom4j 1.6.1.classpath}:\
     ${libs.xml beans 2.5.classpath}:\
-    ${libs.mysql-connector-java-5.1.24.classpath}
+    ${libs.mysql-connector-java-5.1.24.classpath}:\
+    ${libs.ojdbc6.classpath}:\
+    ${libs.itext-4.2.0.classpath}:\
+    ${libs.joda-time-2.2.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
