--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.Apache Poi 3.8.classpath}:\
     ${libs.jnlp.classpath}:\
@@ -37,7 +39,9 @@ javac.classpath=\
     ${libs.mysql-connector-java-5.1.24.classpath}:\
     ${libs.ojdbc6.classpath}:\
     ${libs.itext-4.2.0.classpath}:\
-    ${libs.joda-time-2.2.classpath}
+    ${libs.joda-time-2.2.classpath}:\
+    ${libs.Apache_Poi_3.8.classpath}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
@@ -61,6 +65,15 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=Applet
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
